Fix Contact page text on mobile

--- a/css/contact-responsive.css
+++ b/css/contact-responsive.css
@@ -31,31 +31,32 @@
 
   .contact-line-box {
     width: 90%;
-    height: 80%;
+    height: 90%;
     position: absolute;
     z-index: 2;
-    margin: 7% 5%;
+    margin: 4%;
     border: .3em solid white;
   }
 
   .contact-text-box {
-    width: 60%;
+    width: 65%;
     height: 100%;
     float: right;
     background-color: white;
-    padding: 6%;
+    padding: 5% 6%;
   }
 
   .contact-title {
     text-align: left;
     text-transform: uppercase;
-    font-size: 3.5em;
+    font-size: 3em;
     font-weight: 400;
     margin: 0;
   }
 
   .contact-text {
-    font-size: 2.2em;
+    font-size: 2.1em;
+    margin-top: 3%;
   }
 
   .contact-icon-box {
